# hypr-gridtile

./: Cargo.toml  README.md  hypr-gridtile.ron.example
.github/workflows/: rust.yml
resources/: logo.xcf
src/: bufferwin_main.rs  config.rs  icon.rs  main.rs  util.rs
