[package]
name = "hypr-gridtile"
version = "0.2.3"
edition = "2021"
default-run = "hypr-gridtile"

[dependencies]
egui = "0.29.1"
egui_extras = "0.29.1"
dirs = "5.0.1"
egui_overlay = {version="0.9.0"}
egui_render_wgpu = "0.9.0"
egui_window_glfw_passthrough = {version="0.9.0", features=[]}
hyprland = "0.4.0-beta.1"
image = "0.25.5"
serde = { version = "1.0.214", features = ["derive"] }
softbuffer = "0.4.6"
tiny-skia = "0.11.4"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
winit = "0.29.0"
anyhow = "1.0.93"
ron = "0.8.1"



[[bin]]
name = "hypr-gridtile"
path = "src/main.rs"

[[bin]]
name = "hypr-bufferwin"
path = "src/bufferwin_main.rs"
